2010-09-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.4 release procedure:
 	Changes since nco-4_0_3: chunking everywhere, ncrename bugfix, ncks -m
	cd ~/nco;cvs tag -d nco-4_0_4;cvs tag -d nco-4_0_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.4 release"
	cvs tag -c nco-4_0_4;cvs tag -c nco-4_0_4-1

	* Henry fixed ncap2 dsort() bug

	* Clean-up calendar types and acronyms so building with CC=g++ works

2010-09-23  Charlie Zender  <zender@uci.edu>

	* Document that ncecat does not process coordinate variables

	* Adding string conversion checking to nco_lmt.c, nco_att_utl.c
	caused one ephemeral new ncrcat regression? Which has mysteriously
	disappeared.... 

	* Fix harmless problem that valgrind flagged where ncap2 relied on
	an uninitialized value of dmn->cid in nco_var_fll().

	* Rebuild ncap2...seems to work fine

	* Sort dmn_sct, var_sct in nco.h, change var_sct.is_fix_var flag from int to short

	* Cleanup chunking/deflation initialization

2010-09-19  Charlie Zender  <zender@uci.edu>

	* Note that ncks 4.0.3 and earlier suffer from a bug Henry caught
	in nco_cpy_var_dfn_lmt() where the shuffle and deflate arguments
	to nco_def_var_deflate() were reversed. This would cause
	propagation of deflate and shuffle attributes from in.nc to out.nc
	to go awry when shuffle or deflate, but not both, were true.

	* Continue error handling of string-conversion, now strtod()

2010-09-18  Charlie Zender  <zender@uci.edu>

	* Begin codebase-wide error handling of string-conversion to int
	with nco_sng_cnv_err(), and error handling of string-conversion to
	float with nco_sng_cnv_err(). Many problems encountered.
	Using ncflint.c to prototype strtod() handling and 
	ncpdq.c to prototype strtol() handling.

2010-09-17  Charlie Zender  <zender@uci.edu>

	* Make ncpdq follow same rules as ncbo, ncra, etc. in whether to
	pack grid properties. Accomplish this by adding ncpdq (packing,
	not permuting) to list of operators that return true in call to
	nco_is_rnk_prs_rth_opr().
